- removed mpeg2 transcoding from svn ... (comes in later release) this has not a 
  important priority
- I have a brand-new dvd "Illuminati" that seems to be very good protected.
  A investigate more tests on this ....

  - dd copy .... error after 7 %
  - vobcopy error after 99 % 
  - Transcoding with handbrake  .... exception ....

  - rescue-copy do work but is very slow in execution.


----------------------------------------------------------------------------------------------------
Date : 10.08.2010 | Release : 0.6.16    | Author  : H.Weber | CVS:366
----------------------------------------------------------------------------------------------------

Changes:

- Implement a working-thread
- During a active job the main-process (dd/handbrake/makemkv( will be checked over 
  the worker-thread.
- After a successfull operation the dvd-drive will be opened
- Integrate worker-thread into dvd-iso.sh (testet successfully)
- Intergate worker-thread into dvd-resque.sh (testet successfully)
- Integrate worker-thread into dvd-vcopy.sh (testet successfully) 
- Integrate worker-thread into dvd-mkv.sh  (testet successfully)
- Integrate worker-thread into bluray-transcode.sh (testet successfully)
- Integrate worker-thread inti dvd-handbrake.sh testet successfully)
  including a few little optimisations an cosmetics 
- New commiter to the project <kaveh.ahmadian@gmail.com> 
- New commiter to the project <dekani@gmail.com>
- Added eject parameter to settings
- Non puplic test of makemkv binarys release 1.6.2
- build debian packages for 32 / 64 of makemkv 1.6.2
- New parameter to use a file as a source
- psp and iphone transcoding do not longer ask for directory to store.

Fixes: 

- Typo inside german description addon.xml
- Fixed ugly bug with dvd-vcopy.sh and dvd volume-names 
  that have spaces inside the name (fixed and tested)
- Typo inside setup.sh fixed for 32 makemkv (thanks to Chip2786)

